--- a/Sites-Theme-Kigo-Discovery/kd-common/scss/templates/_search.scss
+++ b/Sites-Theme-Kigo-Discovery/kd-common/scss/templates/_search.scss
@@ -48,7 +48,6 @@
       }
     }
     .title{
-      white-space: nowrap;
       margin-bottom: 0;
     }
     .desc{
